test/types/string/assignToChar/testAssign.11.good
Helpers.chpl:10: In function 'testAssign':
Helpers.chpl:12: error: Cannot assign to uint(8) from string
  testAssign.chpl:26: called as testAssign(param strBytes = "hello", type toType = uint(8))
